# rustful-starter

./: Cargo.toml  LICENSE  Rocket.toml  todo.list
src/: lib.rs  main.rs
src/bootstrap/: mod.rs
src/bootstrap/db_migrations/: mod.rs
src/bootstrap/db_pool/: mod.rs
src/controller/: lib.rs  logs.rs  mod.rs
src/data/: logs.rs
src/dto/: logs.rs
src/model/: logs.rs  mod.rs
